@@ -366,7 +366,7 @@ ecm_value_at (ETableModel *etm, int col, int row)
 	case E_CAL_MODEL_FIELD_CLASSIFICATION :
 		return get_classification (comp_data);
 	case E_CAL_MODEL_FIELD_COLOR :
-		return GINT_TO_POINTER (get_color (model, comp_data));
+		return get_color (model, comp_data);
 	case E_CAL_MODEL_FIELD_COMPONENT :
 		return comp_data->icalcomp;
 	case E_CAL_MODEL_FIELD_DESCRIPTION :
@@ -773,18 +773,18 @@ ecm_get_color_for_component (ECalModel *model, ECalModelComponent *comp_data)
 	gint i, pos;
 	GList *l;
 	gchar *colors[] = {
-		"rgb:71/8D/A9", /* 113 141 169 */
-		"rgb:C6/E2/E2", /* 198 226 226 */
-		"rgb:8D/C6/71", /* 141 198 113 */
-		"rgb:C6/E2/A9", /* 198 226 169 */
-		"rgb:C6/A9/71", /* 198 169 113 */
-		"rgb:FF/E2/71", /* 255 226 113 */
-		"rgb:E2/71/71", /* 226 113 113 */
-		"rgb:FF/A9/A9", /* 255 169 169 */
-		"rgb:C6/8D/C6", /* 198 141 198 */
-		"rgb:E2/C6/E2", /* 226 198 226 */
-		"rgb:D6/D6/84", /* 214 214 132 */
-		"rgb:5B/5B/84"  /* 91 91 132 */
+		"#718DA9", /* 113 141 169 */
+		"#C6E2E2", /* 198 226 226 */
+		"#8DC671", /* 141 198 113 */
+		"#C6E2A9", /* 198 226 169 */
+		"#C6A971", /* 198 169 113 */
+		"#FFE271", /* 255 226 113 */
+		"#E27171", /* 226 113 113 */
+		"#FFA9A9", /* 255 169 169 */
+		"#C68DC6", /* 198 141 198 */
+		"#E2C6E2", /* 226 198 226 */
+		"#D6D684", /* 214 214 132 */
+		"#5B5B84"  /* 91 91 132 */
 	};
 
 	g_return_val_if_fail (E_IS_CAL_MODEL (model), NULL);
