@@ -329,9 +329,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	 */
 	cell = e_cell_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      NULL);
 
 	e_table_extras_add_cell (extras, "calstring", cell);
@@ -342,9 +342,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	 */
 	cell = e_cell_date_edit_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      NULL);
 
 	popup_cell = e_cell_date_edit_new ();
@@ -365,9 +365,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	/* Classification field. */
 	cell = e_cell_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      "editable", FALSE,
 		      NULL);
 
@@ -387,9 +387,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	/* Priority field. */
 	cell = e_cell_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      "editable", FALSE,
 		      NULL);
 
@@ -410,9 +410,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	/* Percent field. */
 	cell = e_cell_percent_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      NULL);
 
 	popup_cell = e_cell_combo_new ();
@@ -439,9 +439,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	/* Transparency field. */
 	cell = e_cell_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      "editable", FALSE,
 		      NULL);
 
@@ -460,9 +460,9 @@ e_calendar_table_init (ECalendarTable *cal_table)
 	/* Status field. */
 	cell = e_cell_text_new (NULL, GTK_JUSTIFY_LEFT);
 	g_object_set (G_OBJECT (cell),
-		      "strikeout_column", CAL_COMPONENT_FIELD_COMPLETE,
-		      "bold_column", CAL_COMPONENT_FIELD_OVERDUE,
-		      "color_column", CAL_COMPONENT_FIELD_COLOR,
+		      "strikeout_column", E_CAL_MODEL_TASKS_FIELD_COMPLETE,
+		      "bold_column", E_CAL_MODEL_TASKS_FIELD_OVERDUE,
+		      "color_column", E_CAL_MODEL_FIELD_COLOR,
 		      "editable", FALSE,
 		      NULL);
 
